# geepers

./: .gitignore  .mcp.json  .orphaned_at  ACCESSIBILITY_SKILL_IMPLEMENTATION_GUIDE.md  AGENTS.md  AGENT_ANALYSIS_INDEX.md  AGENT_REFERENCE.md  BLUESKY_METADATA_SUMMARY.md  CLAUDE.md  CODEX_MANUS_PLATFORM_MAPPING.md  DATA-TROVE-INDEX.txt  DATAVIS_DEPENDENCY_MAP.md  DATAVIS_FETCH_INDEX.md  GEMINI.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MANIFEST.in  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PRE_COMMIT_REPORT.md  PUBLISHING_BLOCKERS.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_WIN_SCAN_COMPLETE.md  README.md  RESEARCH_INDEX.md  SEARCH-SUMMARY.md  SEARCH_SESSION_SUMMARY.md  SKILL_RESEARCH_SUMMARY.md  SYSADMIN_SHARED_OVERLAP_ANALYSIS.md  api-credentials-inventory.md  bluesky_suite_index.md  bluesky_suite_metadata.md  bluesky_suite_ports_and_paths.md  clawhub-package.json  codex-package.json  data-trove-inventory.md  implementation_plan.md  input.json  manus-skills.json  (+4 more)
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: skills-unification.yml
agents/: AGENT_DOMAINS.md  CLAUDE.md  geepers_agents  geepers_api.md  geepers_builder.md  geepers_canary.md  geepers_conductor.md  geepers_corpus_ux.md  geepers_css.md  geepers_datavis_color.md  geepers_datavis_data.md  geepers_janitor.md  geepers_links.md  geepers_orchestrator_datavis.md  geepers_orchestrator_fullstack.md  geepers_orchestrator_research.md  geepers_orchestrator_web.md  geepers_poet.md  geepers_readme.md  geepers_scalpel.md  geepers_services.md  geepers_uxpert.md
agents/.claude/: settings.local.json
agents/checkpoint/: geepers_orchestrator_checkpoint.md  geepers_repo.md  geepers_scout.md
agents/corpus/: geepers_corpus.md  geepers_orchestrator_corpus.md
agents/datavis/: geepers_datavis_color.md  geepers_datavis_math.md  geepers_datavis_story.md  geepers_datavis_viz.md  geepers_orchestrator_datavis.md
agents/deploy/: geepers_caddy.md  geepers_orchestrator_deploy.md
agents/frontend/: geepers_motion.md  geepers_orchestrator_frontend.md  geepers_typescript.md  geepers_uxpert.md  geepers_webperf.md
agents/fullstack/: geepers_orchestrator_fullstack.md
agents/hive/: geepers_integrator.md  geepers_orchestrator_hive.md  geepers_planner.md  geepers_quickwin.md  geepers_refactor.md
agents/master/: conductor_geepers.md
agents/product/: geepers_docs.md
agents/quality/: geepers_a11y.md  geepers_deps.md  geepers_orchestrator_quality.md  geepers_perf.md  geepers_security.md
agents/research/: geepers_citations.md  geepers_data.md  geepers_diag.md  geepers_doublecheck.md  geepers_fetcher.md  geepers_orchestrator_research.md
agents/shared/: PARALLEL_WORKFLOWS.md  SESSION_WORKFLOWS.md  WORKFLOW_REQUIREMENTS.md
agents/standalone/: geepers_dashboard.md  geepers_docs.md  geepers_git.md  geepers_humanizer.md  (+1 more)
archived-services/: removed-services-2025-12-17.json
cache/: README_WORLDBANK_DATA.md  WORLDBANK_FINDINGS_SUMMARY.txt  worldbank_api_technical_guide.md  worldbank_disability_accessibility_report.md
commands/: audit.md  checkpoint.md  consensus.md  context.md  corpus.md  deploy.md  docs.md  end.md  fix.md  foresight.md  geepers-audit.md  geepers-checkpoint.md  geepers-consensus.md  geepers-context.md  geepers-datavis.md  geepers-end.md  geepers-foresight.md  geepers-game.md  geepers-health.md  geepers-help.md  geepers-hunt.md  geepers-release.md  geepers-reuse.md  geepers-session.md  geepers-ship.md  geepers-start.md  geepers-thinkagain.md  geepers-thinktwice.md  geepers-todo.md  help.md  hunt.md  planner.md  readme.md  release.md  research.md  scout.md  second-opinion.md  session.md  ship.md  start.md  (+6 more)
data/: skill-inventory.md
docs/: MIGRATION_MAP.md  UNIFICATION_ARCHITECTURE.md
geepers/: CLAUDE.md  __init__.py  mcp
hive/: 00-START-HERE.txt  ADMIN-QUICKWIN-SESSION.md  ANALYSIS-DATAVIS-CONSOLIDATION.md  DATASETS-PLANNER-SUMMARY.md  DATASETS-QUICK-REF.md  DATASETS-SUMMARY.txt  DREAMWALKER-MCP-INDEX.txt  FORESIGHT-QUICKWINS-SUMMARY.txt  INDEX-DATAVIS-CONSOLIDATION.md  INDEX-FORESIGHT-QUICKWINS.md  INDEX-blueballs.txt  INDEX.md  QUICK-ACTIONS.md  QUICK-START-FORESIGHT.txt  README-DATASETS.md  README-DATAVIS-CONSOLIDATION.md  README-FORESIGHT-QUICKWINS.md  README-blueballs-release.md  START-HERE-BLUEBALLS.md  SUMMARY.md  WORKING-quickwins.md  accessibility-repos-quickwins.md  admin-findings.txt  admin-quickwins.md  aivia-queue.md  antisocial-quickwins.md  bipolar-dashboard-queue.md  bipolar-dashboard-quickwins.md  blissAPI-quickwins.md  blueballs-immediate-actions.txt  blueballs-queue.md  data_trove-queue.md  datasets-queue.md  datavis-consolidation-queue.md  datavis-queue.md  datavis-quickwins.md  diachronica-queue.md  dreamer-skills-quickwins.md  dreamwalker-mcp-ARCHITECTURE.md  dreamwalker-mcp-CHECKLIST.md  (+35 more)
manifests/: aliases.yaml  platforms.yaml  skills-manifest.yaml
metadata/: BLUESKY_SUITE_METADATA.md  COMPLETION_REPORT.txt  METADATA_SUMMARY.md  README.md
research/: EXECUTIVE_SUMMARY.md  KEY_FINDINGS.txt  MARKETPLACE_RESEARCH.md  SUBMISSION_CHECKLIST.md
schemas/: skill-manifest.schema.json
scripts/: build-manifests.py  build-platform-packages.py  clinical_data_audit.py  generate-reference.py  publish-clawhub.sh  report-drift.sh  sync-mirrors.sh  sync-platforms.sh  system-cleanup.sh  validate-skills.py
search-results/: BLUESKY_ATPROTO_FEATURE_MATRIX.md  BLUESKY_CODE_PATTERNS.md  BLUESKY_QUICK_REFERENCE.md  BLUESKY_SEARCH_SUMMARY.md  INDEX.md  README.md
skills/: README.md  package_all_skills.py  rebuild-zips.sh  update_config_phase6.py
skills/source/vision/: README.md  pyproject.toml
skills/source/vision/src/: alt_text.py  client.py  server.py
swarm/: QUICK_REFERENCE.md  RESEARCH_SUMMARY.md  search-log.md
tasks/: dataset-notebook-coordination.md  datavis-dual-project-2025-12-25.md  firehose-dashboard-variants.md
temp/: SKILLS_ARCHITECTURE.md  SKILLS_ARCHITECTURE_SUMMARY.md  SKILLS_DEPENDENCY_DIAGRAM.md  SKILLS_IMPLEMENTATION_CHECKLIST.md  SKILLS_QUICK_REFERENCE.md  foresight_web_task.txt
todos/: foresight-backend.md
(+262 files in other folders)
