[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geepers-agents"
version = "1.0.2"
description = "Agent system for geepers multi-agent orchestration with 70 specialized Claude Code agents"
authors = [{name = "Luke Steuber", email = "luke@dr.eamer.dev"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["mcp", "orchestration", "multi-agent", "llm", "claude-code", "geepers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "geepers-kernel>=1.2.0",  # Foundation library for LLM providers, orchestration, data fetching
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# LLM Providers (via geepers-kernel)
anthropic = ["anthropic>=0.71.0"]
openai = ["openai>=2.0.0"]
xai = ["openai>=2.0.0"]
mistral = ["mistralai>=1.0.0"]
cohere = ["cohere>=5.15.0"]
gemini = ["google-generativeai>=0.8.0"]
perplexity = ["openai>=2.0.0"]
groq = ["openai>=2.0.0"]
huggingface = ["huggingface-hub>=0.20.0"]

# Data Sources
arxiv = ["arxiv>=2.0.0"]
wikipedia = ["wikipedia>=1.4.0"]
youtube = ["google-api-python-client>=2.0.0"]

# Utilities
tts = ["gtts>=2.5.0"]
citations = ["bibtexparser>=1.4.0"]
redis = ["redis>=7.0.0"]
documents = [
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
]

# Telemetry
telemetry = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

# Full installation
all = [
    "anthropic>=0.71.0",
    "openai>=2.0.0",
    "cohere>=5.15.0",
    "google-generativeai>=0.8.0",
    "huggingface-hub>=0.20.0",
    "arxiv>=2.0.0",
    "wikipedia>=1.4.0",
    "google-api-python-client>=2.0.0",
    "gtts>=2.5.0",
    "bibtexparser>=1.4.0",
    "redis>=7.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

[project.urls]
Homepage = "https://dr.eamer.dev/geepers/"
Repository = "https://github.com/lukeslp/geepers"
Issues = "https://github.com/lukeslp/geepers/issues"
Documentation = "https://dr.eamer.dev/geepers/"

[tool.setuptools]
packages = [
    "geepers",
    "geepers.orchestrators",
    "geepers.orchestrators.enterprise",
    "geepers.parser",
    "geepers.naming",
    "geepers.utils",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.setuptools.exclude-package-data]
"*" = [
    "logs/*", "reports/*", "recommendations/*", "status/*", "archive/*",
    "venv/*", "remote-venv/*", "tests/*", "__pycache__/*",
    "*.sh", "*.backup*", "state_backup.json",
    ".backup-*/*",
    "CLAUDE.md", "OPTIMIZATION_SUMMARY.txt",
    "claude_code_config.json", "cursor_mcp_config.json",
]
