[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geepers-vision"
version = "0.1.0"
description = "Enterprise Computer Vision MCP Server for Safety and Engineering"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Antigravity", email = "antigravity@geepers.ai" },
]
dependencies = [
  "openai>=1.0.0",
  "httpx",
  "mcp"
]

[project.scripts]
geepers-vision = "geepers_vision.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src"]
